project(nebula/legacy_thomas)
list(APPEND SOURCE_FILES archive.cc)
list(APPEND SOURCE_FILES material.cc)
list(APPEND SOURCE_FILES optional.cc)
list(APPEND SOURCE_FILES polynomial.cc)
list(APPEND SOURCE_FILES triangle.cc)
list(APPEND SOURCE_FILES interpolate.cc)
list(APPEND SOURCE_FILES octree.cc)
list(APPEND SOURCE_FILES point3.cc)
list(APPEND SOURCE_FILES spline.cc)
list(APPEND SOURCE_FILES tribox.cc)
add_library(legacy_thomas ${SOURCE_FILES})
